# ComfyUI-Captionator-Qwen35

./: README.md  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish_action.yml
