# pyproject.toml
[project]
name = "comfyui-captionator-qwen35"
description = "ComfyUI Qwen 3.5 Prompting nodes (captionate image, improve prompt, etc)"
version = "0.1.4"
license = { text = "MIT" }
dependencies  = ["sentencepiece>=0.1.99", "tiktoken>=0.4.0"]

[project.urls]
Repository = "https://github.com/ArtemKo7v/ComfyUI-Captionator-Qwen35"

[tool.comfy]
PublisherId = "artemko7v"
DisplayName = "ComfyUI Qwen 3.5 Prompting nodes"
